<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.andreas.assignment1.EditActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/name_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="60dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_input"
        android:layout_below="@+id/name_text"
        android:layout_alignLeft="@+id/name_text"
        android:layout_alignStart="@+id/name_text"
        android:minWidth="200dp"
        android:layout_marginBottom="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:id="@+id/id_text"
        android:layout_below="@+id/name_input"
        android:layout_alignLeft="@+id/name_input"
        android:layout_alignStart="@+id/name_input" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_input"
        android:layout_below="@+id/id_text"
        android:layout_alignLeft="@+id/id_text"
        android:layout_alignStart="@+id/id_text"
        android:minWidth="200dp"
        android:layout_marginBottom="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_developer"
        android:id="@+id/dev_text"
        android:layout_below="@+id/id_input"
        android:layout_alignLeft="@+id/id_input"
        android:layout_alignStart="@+id/id_input" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dev_text"
        android:layout_toRightOf="@+id/dev_text"
        android:layout_toEndOf="@+id/dev_text">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioBtn_yes"
            android:id="@+id/radioBtn_yes"
            android:checked="false"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioBtn_no"
            android:id="@+id/radioBtn_no"
            android:checked="false"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:id="@+id/btn_cancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="75dp"
        android:layout_marginLeft="70dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok"
        android:id="@+id/btn_ok"
        android:layout_alignBottom="@+id/btn_cancel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="70dp" />
</RelativeLayout>
