<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.andreas.assignment1.ViewAcivity"
    tools:showIn="@layout/activity_view_acivity">

    <ImageButton
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profilePic"
        android:src="@drawable/portrait_placeholder"
        android:maxHeight="150dp"
        android:maxWidth="150dp"
        android:clickable="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:scaleType="centerInside"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/profilePic"
        android:layout_alignStart="@+id/profilePic"
        android:layout_below="@+id/profilePic"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/name_Text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_view"
            android:minWidth="200dp"
            android:singleLine="false" />
        <View
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:id="@+id/id_Text" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_view"
            android:minWidth="200dp" />
        <View
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_developer"
            android:id="@+id/dev_text" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_view"
            android:layout_gravity="right"
            android:checked="false"
            android:layout_marginRight="90dp"
            android:layout_marginTop="-22dp"
            android:clickable="false" />
    </LinearLayout>
</RelativeLayout>
